# CppLessonsPart1

./: .gitignore  CMakeLists.txt  README.md
block01/examples/: 1_hello_world.cpp  2_variables.cpp  3_input_output.cpp  4_operations.cpp
block02/examples/: 1_logic_bool.cpp  2_logic_compound.cpp
lesson01/examples/: 2_variables.cpp  3_input_output.cpp  4_operations.cpp
lesson01/materials/: data_types.cpp
